# dovision

./: .gitignore  .gitlab-ci.yml  db.sqlite3  manage.py  pyproject.toml  pytest.ini
accounts/: urls.py  views.py
doVision/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
doVision/migrations/: 0001_initial.py  0002_todo.py  0003_auto_20210131_1141.py  0004_delete_todolist.py  0005_todolist.py  0006_auto_20210202_1723.py  0007_task_priority.py  0008_auto_20210213_1341.py  0009_auto_20210214_1132.py  0010_auto_20210217_1803.py  0011_task_modified.py  0012_auto_20210217_1829.py  0013_auto_20210217_1836.py  0014_auto_20210217_1840.py  0015_remove_task_modified.py  0016_task_modified.py  0017_task_user.py  0018_auto_20210222_2217.py  0018_auto_20210227_1044.py  0019_merge_20210227_1316.py
doVision/static/css/: mystyle.css
doVision/templates/: delete.html  home.html  update_task.html
doVision/templates/registration/: login.html  reset_password.html  reset_password_done.html  signup.html
tests/: test_dovision.py
